--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
+  "scripts": {
+    "start": "parcel index.html",
+    "build": "parcel build index.html"
+  },
   "dependencies": {
     "gsap": "^3.11.3",
-    "parcel": "^2.7.0",
+    "parcel": "^2.12.0",
     "three": "^0.145.0",
     "throttle-debounce": "^5.0.0"
   },
